# EasyMidiFileParserCpp

./: CMakeLists.txt  readme.md
Private/: AMIDIPlayer.cpp  AdvancedMIDIParser.cpp  IMIDIEventReceiver.cpp  MIDIEventDispatcher.cpp  MIDIExport.cpp  MIDIMusic.cpp  MIDIMusicFiller.cpp  MIDIParser.cpp  MIDIParserBase.cpp  MIDIPlayerAsync.cpp  PMIDIEvent.cpp  Utilities.cpp
Private/Converter/: MIDIMusic_ChannelFilter.cpp  MIDIMusic_CompressorConverter.cpp  MIDIMusic_InstrumentFilter.cpp  MIDIMusic_MonoTrackConverter.cpp  MIDIMusic_NoteOnOffConverter.cpp
Private/Converters/: MIDIMusic_AbsoluteConverter.cpp  MIDIMusic_ChannelFilter.cpp  MIDIMusic_CompressorConverter.cpp  MIDIMusic_InstrumentFilter.cpp  MIDIMusic_MonoTrackConverter.cpp  MIDIMusic_NoteOnOffConverter.cpp  MIDIMusic_RelativeConverter.cpp  MIDIMusic_Tokenize.cpp
Public/: AMIDIPlayer.h  AdvancedMIDIParser.h  EndianHelpers.h  EventsPrinter.h  IMIDIEventReceiver.h  LoggingMIDIParser.h  MIDIEventDispatcher.h  MIDIExport.h  MIDIHelpers.h  MIDIMusic.h  MIDIMusicFiller.h  MIDIParser.h  MIDIParserBase.h  MIDIParserException.h  MIDIPlayerAsync.h  Macros.h  PMIDIEvent.h  Utilities.h
Public/Buffers/: BufferReader.h  BufferWriter.h
Public/Converters/: MIDIMusic_AbsoluteConverter.h  MIDIMusic_ChannelFilter.h  MIDIMusic_CompressorConverter.h  MIDIMusic_InstrumentFilter.h  MIDIMusic_MonoTrackConverter.h  MIDIMusic_NoteOnOffConverter.h  MIDIMusic_RelativeConverter.h  MIDIMusic_Tokenize.h
Tests/: CMakeLists.txt
Tests/LoadAllMIDI/: CMakeLists.txt  main.cpp
Tests/LoadSingleMIDI/: CMakeLists.txt  main.cpp
Tests/WriteMIDI/: CMakeLists.txt  main.cpp
